[package]
name = "membrane"
version = "0.1.0"
authors = ["Tom_The_Geek <tomthegeek.8559@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4"
env_logger = "0.9"

# async
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"

# config
serde = { version = "1", features = ["derive"] }
toml = { version = "0.5" }
